refactor: email validation via dependency, move validation inside email component

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   "dependencies": {
     "form-serialize": "^0.7.1",
     "react": "^0.14.8||^15.0.0",
+    "validator": "^5.5.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
