--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
   },
   "dependencies": {
     "form-serialize": "^0.7.1",
+    "lodash.debounce": "^4.0.7",
     "react": "^0.14.8||^15.0.0",
     "validator": "^5.5.0",
     "whatwg-fetch": "^1.0.0"
